# bank_term_deposit_docker

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.html  README.md  api.py  engineering.py  gradio_app.py  helpers.py  load_model.py  main.py  main_preprocess.py  predict.py  preprocess.py  pyproject.toml  requirements.txt  train.py
data/: readme.md  sample_submission.csv
models/: readme.md
