[project]
name = "bank-ml-app"
version = "0.1.0"
description = "Machine learning application for bank predictions"
readme = "README.md"
requires-python = ">=3.13"

# Explicitly list all Python packages (directories with code) for setuptools
# Do NOT include non-code folders like data/
packages = ["preprocessing", "models", "ui", "api", "utils"]

# Dependencies required to run the project
dependencies = [
    "pandas==2.3.1",
    "numpy==2.3.0",
    "scikit-learn==1.7.1",
    "matplotlib==3.10.5",
    "seaborn==0.13.0",
    "pytest==8.0.0",
    "pytest-cov==6.2.0",
    "jupyter==1.0.0",
    "ipython==7.0.0",
    "requests==2.22.0",
    "fastapi==0.116.1",
    "uvicorn==0.34.0",
    "gradio==5.42.0",
    "joblib==1.5.1",
    "xgboost==3.0.0",
    "lightgbm==4.6.0",
    "optuna==4.4.0",
    "pydantic==2.8.2"
]
